--- a/templates/error.tmpl
+++ b/templates/error.tmpl
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>error | akazawa-demo</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/error.css">
+    <link rel="stylesheet" type="text/css" href="https://d3p7ybpyhwl4ka.cloudfront.net/static/css/error.css">
   </head>
 <main class="bsod container">
   <h1 class="neg title"><span class="bg">The URL is incorrect or the URL authentication has expired</span></h1>
