--- a/templates/success.tmpl
+++ b/templates/success.tmpl
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>success | akazawa-demo</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/success.css">
+    <link rel="stylesheet" type="text/css" href="https://d3p7ybpyhwl4ka.cloudfront.net/static/css/success.css">
   </head>
   <div class="noise"></div>
   <div class="overlay"></div>
